# ubertooth-one-connector

./: .gitignore  37  AGENT_PROMPT.md  ASYNC_USB_STATUS.md  Cargo.toml  DEPLOYMENT_STATUS.md  EXPLORATION_SUMMARY.md  GITHUB_ISSUES.md  HARDWARE_TEST_REPORT.md  ISSUE_TUI.md  LIBUBERTOOTH_RUST_FEASIBILITY.md  NUSB_IMPLEMENTATION_STATUS.md  PHASE2_TEST_SUMMARY.md  PHASE3_BULK_TRANSFER_ISSUE.md  PHASE3_IMPLEMENTATION.md  PRD.md  QUICKSTART_PHASE3.md  README.md  STRIKE48_INTEGRATION.md  TOOLS_EXPOSED.md  TOOL_SCHEMAS.md  TUI_TESTING.md  TUI_WEEK1_COMPLETE.md  justfile  rebuild-and-restart.sh  run-agent-noauth.sh  run-agent.sh  run-connector.sh  test-both.sh  test-btle-scan.py  test-btle-scan.sh  test-sudo-usb.sh  test_bt_analyze.sh  test_bt_analyze_simple.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/src/tui/: app.rs  events.rs  mod.rs  ui.rs
apps/cli/src/tui/views/: category.rs  mod.rs  tool_form.rs
apps/headless/: Cargo.toml
apps/headless/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: connector.rs  error.rs  events.rs  lib.rs  logging.rs  tools.rs
crates/platform/: Cargo.toml
crates/platform/src/: backend.rs  capture_store.rs  config_store.rs  lib.rs  rust_usb.rs  sidecar.rs  system_info.rs
crates/tools/: Cargo.toml
crates/tools/src/: afh_analyze.rs  bt_analyze.rs  bt_compare.rs  bt_decode.rs  bt_discover.rs  bt_fingerprint.rs  bt_follow.rs  bt_jam.rs  bt_load_config.rs  bt_save_config.rs  bt_scan.rs  bt_specan.rs  bt_spoof.rs  btle_follow.rs  btle_inject.rs  btle_mitm.rs  btle_scan.rs  btle_slave.rs  capture_delete.rs  capture_export.rs  capture_get.rs  capture_list.rs  capture_tag.rs  config_delete.rs  config_list.rs  configure_channel.rs  configure_leds.rs  configure_modulation.rs  configure_power.rs  configure_squelch.rs  device_connect.rs  device_disconnect.rs  device_status.rs  lib.rs  pcap_merge.rs  session_context.rs  ubertooth_raw.rs
crates/usb/: Cargo.toml  README.md
crates/usb/src/: async_reader.rs  async_transfer.rs  commands.rs  constants.rs  device.rs  device_libusb.rs  device_nusb.rs  error.rs  lib.rs  libusb_async.rs  libusb_ffi.rs  libusb_stream.rs  protocol.rs  stream_reader.rs
examples/: test_analyze.rs  test_async_vs_poll.rs  test_backend_integration.rs  test_ble_parsing.rs  test_bt_analyze.rs  test_bt_analyze_phase2.rs  test_btle_scan.rs  test_bulk_read.rs  test_exact_python_sequence.rs  test_libusb_async.rs  test_libusb_device.rs  test_nusb_async.rs  test_nusb_device.rs  test_nusb_simple.rs  test_nusb_stream.rs  test_spectrum_analysis.rs  test_tool_schemas.rs  test_usb_diagnostics.rs
scripts/: verify-phase3.sh
