[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/platform",
    "crates/tools",
    "crates/usb",
    "apps/headless",
    "apps/cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["jtomek-strike48"]
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform-specific
sysinfo = "0.32"

# Temp files
tempfile = "3"

# UUID
uuid = { version = "1", features = ["v4"] }

# Home directory
dirs = "5"

# CLI
clap = { version = "4", features = ["derive"] }

# USB (Phase 3)
rusb = "0.9"

# PCAP
pcap-file = "2"

# Strike48 Connector SDK
strike48-connector = { path = "../sdk-rs/crates/connector" }

# Internal crates
ubertooth-core = { path = "crates/core" }
ubertooth-platform = { path = "crates/platform", default-features = false }
ubertooth-tools = { path = "crates/tools", default-features = false }
ubertooth-usb = { path = "crates/usb" }
