[package]
name = "ubertooth-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ubertooth-agent"
path = "src/main.rs"

[dependencies]
# Internal
ubertooth-core = { workspace = true }
ubertooth-platform = { workspace = true }
ubertooth-tools = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# CLI
clap = { workspace = true }

# Strike48 SDK
strike48-connector = { workspace = true }
