[package]
name = "ubertooth-usb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# USB
rusb = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
