[package]
name = "ubertooth-usb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
ubertooth-core = { path = "../core" }

# USB
rusb = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = "0.4"

[dev-dependencies]
tracing-subscriber = { workspace = true }

[[example]]
name = "test_btle_scan"
path = "../../examples/test_btle_scan.rs"

[[example]]
name = "test_bulk_read"
path = "../../examples/test_bulk_read.rs"
