[package]
name = "ubertooth-usb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
ubertooth-core = { path = "../core" }

# USB
rusb = { workspace = true }
nusb = { version = "0.2", features = ["tokio"] }

# Async
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = "0.4"

[dev-dependencies]
tracing-subscriber = { workspace = true }

[[example]]
name = "test_btle_scan"
path = "../../examples/test_btle_scan.rs"

[[example]]
name = "test_bulk_read"
path = "../../examples/test_bulk_read.rs"

[[example]]
name = "test_usb_diagnostics"
path = "../../examples/test_usb_diagnostics.rs"

[[example]]
name = "test_nusb_async"
path = "../../examples/test_nusb_async.rs"

[[example]]
name = "test_nusb_device"
path = "../../examples/test_nusb_device.rs"

[[example]]
name = "test_nusb_stream"
path = "../../examples/test_nusb_stream.rs"

[[example]]
name = "test_nusb_simple"
path = "../../examples/test_nusb_simple.rs"

[[example]]
name = "test_libusb_async"
path = "../../examples/test_libusb_async.rs"

[[example]]
name = "test_libusb_diagnostic"
path = "../../examples/test_libusb_diagnostic.rs"

[[example]]
name = "test_sync_read"
path = "../../examples/test_sync_read.rs"

[[example]]
name = "test_with_access_addr"
path = "../../examples/test_with_access_addr.rs"

[[example]]
name = "test_pure_libusb"
path = "../../examples/test_pure_libusb.rs"

[[example]]
name = "test_pure_libusb_async"
path = "../../examples/test_pure_libusb_async.rs"

[[example]]
name = "test_libusb_device"
path = "../../examples/test_libusb_device.rs"

[[example]]
name = "test_minimal_ble"
path = "../../examples/test_minimal_ble.rs"

[[example]]
name = "test_verify_mode"
path = "../../examples/test_verify_mode.rs"

[[example]]
name = "test_with_rx_start"
path = "../../examples/test_with_rx_start.rs"

[[example]]
name = "test_with_channel"
path = "../../examples/test_with_channel.rs"

[[example]]
name = "test_no_stop"
path = "../../examples/test_no_stop.rs"

[[example]]
name = "test_exact_python_sequence"
path = "../../examples/test_exact_python_sequence.rs"

[[example]]
name = "test_async_vs_poll"
path = "../../examples/test_async_vs_poll.rs"

[[example]]
name = "test_ble_parsing"
path = "../../examples/test_ble_parsing.rs"

[[example]]
name = "test_spectrum_analysis"
path = "../../examples/test_spectrum_analysis.rs"
